# HuronFS

./: .Master.h.swp  AUTHORS  Acknowledgement  IO_const.h  IOnode.cpp  IOnode.h  Makefile  Makefile.am  Makefile.in  Master.cpp  Master.h  README.md  bak  bootstrap.sh  common.mk  config.h  config.h.in  configure  configure.ac  test
include/: .BB.cpp.swp  .BB_internal.h.swp  .Client.h.swp  .IO_const.h.swp  .IOnode.h.swp  .Master.h.swp  .nfs0000000032e412e200000037  BB.h  BB_internal.h  BB_posix.h  CBB.h  CBB_const.h  CBB_internal.h  CBB_stdio.h  CBB_stream.h  Client.h  Communication.h  IO_const.h  IOnode.h  Master.h  Query_Client.h  Server.h  User_Client.h
lib/: .nfs0000000032e4171200000005  .nfs0000000032e4171a00000003  .nfs0000000033b6109600000047  .nfs0000000033b612b900000049
src/: .Master.cpp.swp  BB.cpp  BB_posix.cpp  CBB.cpp  CBB_posix.cpp  CBB_stdio.cpp  CBB_stream.cpp  Client.cpp  IOnode.cpp  Master.cpp  Query_Client.cpp  Server.cpp  User_Client.cpp  User_Client.cpp.bak  master_main.cpp  node_main.cpp  user_client.cpp  user_main.cpp
src/Client/: Makefile  Makefile.am  Makefile.in
src/Client/include/: .CBB.h.swp  CBB.h  CBB_basic.h  CBB_client.h  CBB_posix.h  CBB_stdio.h  CBB_stream.h
src/Client/src/: .CBB.cpp.swp  .CBB_basic.cpp.swp  .CBB_client.cpp.swp  .nfs0000000031e6ddc0000099fd  .nfs0000000031e6ddce00009a0c  CBB.cpp  CBB_basic.cpp  CBB_client.cpp  CBB_fuse.cpp  CBB_posix.cpp  CBB_stdio.cpp  CBB_stream.cpp
src/Common/: CBB_connector.d  Makefile  Makefile.am  Makefile.in
src/Common/include/: .nfs0000000031e6ddc2000099fa  CBB_IO_task.h  CBB_basic_swap.h  CBB_basic_thread.h  CBB_communication_thread.h  CBB_connector.h  CBB_connector.h.bak  CBB_const.h  CBB_data_sync.h  CBB_deque.h  CBB_dir.h.bak  CBB_error.h  CBB_fault_tolerance.h  CBB_heart_beat.h  CBB_internal.h  CBB_list.h  CBB_lru.h  CBB_map.h  CBB_memory_pool.h  CBB_mutex_lock.h  CBB_mutex_locker.h  CBB_profiling.h  CBB_queue.h  CBB_remote_task.h  CBB_request_handler.h  CBB_rwlock.h  CBB_rwlocker.h  CBB_serialization.h  CBB_set.h  CBB_socket.h  CBB_swap.h  CBB_task_parallel.h  CBB_vector.h  Client.h  Comm_api.h  Comm_basic.h  Communication.h  Server.h  Thread_pool.h
src/Common/include/comm_type/: CBB_cci.h  CBB_tcp.h  cci.h  tcp.h
src/Common/src/: .Client.cpp.swp  .Server.cpp.swp  CBB_IO_task.cpp  CBB_basic_thread.cpp  CBB_cci.cpp  CBB_communication_thread.cpp  CBB_connector.cpp  CBB_connector.cpp.bak  CBB_data_sync.cpp  CBB_dir.cpp  CBB_heart_beat.cpp  CBB_memory_pool.cpp  CBB_mutex_lock.cpp  CBB_mutex_locker.cpp  CBB_profiling.cpp  CBB_remote_task.cpp  CBB_request_handler.cpp  CBB_rwlock.cpp  CBB_rwlocker.cpp  CBB_serialization.cpp  CBB_socket.cpp  CBB_task_parallel.cpp  CBB_tcp.cpp  Client.cpp  Comm_basic.cpp  Server.cpp  Thread_pool.cpp
src/Common/test/: client  client.cpp  server
src/IOnode/: Makefile  Makefile.am  Makefile.in
src/IOnode/include/: IOnode.h  IOnode_basic.h
src/IOnode/src/: .nfs0000000031e6ddc1000099fc  IOnode.cpp  IOnode_basic.cpp  node_main.cpp
src/Master/: Makefile  Makefile.am  Makefile.in
src/Master/include/: .Master_basic.h.swp  Master.h  Master_basic.h  Master_basic.h.bak
src/Master/src/: Master.cpp  Master_basic.cpp  Master_basic.cpp.bak  master_main.cpp
test/test1/: Makefile  test1.c
test/test2/: Makefile  test2.c
test/test3/: .nfs0000000032ec194500000004  .nfs0000000032ec194800000006  Makefile  test3.c
tests/: Makefile
tests/test1/: Makefile  prepare.sh  test1.c
tests/test2/: Makefile  prepare.sh  test2  test2.c
tests/test3/: Makefile  hostfile  prepare.sh  test3.bak  test3.c
tests/test4/: .nfs00000000332421ac0000004a  Makefile  test4.c
tests/test5/: Makefile  test5  test5.c
tests/test_communication/: Makefile  client.cpp  server.cpp
unused/: Query_Client.cpp  User_Client.cpp  User_Client.h  user_client.cpp
